fix: buttonPlate에 gap 추가

--- a/hwe/scss/main.scss
+++ b/hwe/scss/main.scss
@@ -115,6 +115,7 @@ body {
         display: grid;
         grid-template-columns: repeat(10, 1fr);
         padding: 0;
+        gap: 1px;
     }
 
     .toolbars>.buttonPlate {
